@@ -31,6 +31,7 @@ AUX automake-1.9.6-subst-test.patch 1332 RMD160 00223b889535970a3f50b15a7383ad9d
 DIST automake-1.10.3.tar.bz2 957505 RMD160 698d4fe613ec852669c3c74a980b9c72f2dc821c SHA1 ed6944f2b746a356bd161ab2210cf121d1d04e12 SHA256 e98ab43bb839c31696a4202e5b6ff388b391659ef2387cf9365019fad17e1adc
 DIST automake-1.11.1.tar.bz2 1066685 RMD160 0d160a06a022b145095c6433c3f0511ec5a8c6fd SHA1 44ab0007d8edbe82338e29bdda2f461f43a98818 SHA256 5b159d3c0e0a1f87de71b68bcb9f1a1c49e9e71749c9b723f17e2e1e0295c7ae
 DIST automake-1.11.5.tar.xz 1092140 RMD160 dd6e87858ad6bda945c8bdf412ab88bdf3ad60f8 SHA1 d4cf2a8b5b7fd1458014e3d7fefbdc175639f59f SHA256 894b1fd7a18db868cefb5246e335a19f7cdb92297d20aeda356e921f0981f3a9
+DIST automake-1.12.1.tar.xz 1352384 RMD160 e2ae3ffe2d4bc2da624924831660a3959ad2e93c SHA1 ec120defdbb994674955504c1a1a94763fa4e87d SHA256 32750869b24ac2a25765215fdf75c349aabf9465e436de2351602e1aca5c173f
 DIST automake-1.12.tar.xz 1331352 RMD160 82314eba69008860cbfbb80eda52a23fbaf13ec4 SHA1 b01dccdcb638ed90744e87b19ad3a92737149dff SHA256 4f920cad2dc59f1be296b7d7584e3828a36154d16191f3cad60a73e6e9bcf879
 DIST automake-1.4-p6.tar.gz 375060 RMD160 ae40b2200eec95b601ebc65bc3cc916bb2a54066 SHA1 330c75c98e6dcdf21cbb63cf94ced8ea564b9438 SHA256 503cdc2b0992a4309545d17f462cb15f99bb57b7161dfc4082b2e7188f2bcc0f
 DIST automake-1.5.tar.gz 526934 RMD160 5c5310c3923a8bfb1c94d77c7c53c593552e0464 SHA1 9c426ac75e514dc214dea6309b07c5d9cb95002c SHA256 24b4775e3143fd3e35db5cbaba80845d9359c7bfd751a6cebe3014fbf6115d78
@@ -42,6 +43,7 @@ EBUILD automake-1.10.3.ebuild 2047 RMD160 90237dd037f139c49b4c46cd942a160b782885
 EBUILD automake-1.11.1-r1.ebuild 2383 RMD160 c7423d242d9121d291cecae8051f444085b7c67d SHA1 c6df508e40c6a45654ecfe1475298dbe1a215907 SHA256 0d1565afb913d09636a46e73b5ca93fbc836b8335d6835e5dd0d698064065a66
 EBUILD automake-1.11.1.ebuild 2332 RMD160 2e6ea3486425575c3ff85493071653e539add187 SHA1 ad689912e3162c80d46f533f24ccb6a61b783737 SHA256 c501717030120ef576a13b9c7a3e77d77222ed7483ee5313ab054369690fabb7
 EBUILD automake-1.11.5.ebuild 2396 RMD160 7169747aa0ee164c589405674f34efc2325d798d SHA1 cb14077abca7ffb77fd8359e9974f0d0278d99af SHA256 fb92b01e5b691412108908cf526b854827721be0e8c13adcd71f59abd5b74531
+EBUILD automake-1.12.1.ebuild 2287 RMD160 b47a848fe92ded4e93c3bff5a91a9db028ee73a0 SHA1 611ecc8533c05625a43077f939dc4bc1d6e9751d SHA256 95d3337dc44131f7e24a8143db5c804d7fab3a14da0c527638243e5b65bcadc6
 EBUILD automake-1.12.ebuild 2285 RMD160 67ed0a9b4a72a93b3b97e518777b1391352001de SHA1 6672b6b160bcf6f14d2194f757470b9e1d92df8d SHA256 f8dcf52381e70417a373297324f98a06740e309b7607e710166827ad45473f90
 EBUILD automake-1.4_p6-r1.ebuild 1902 RMD160 d08ee129e32121c22f409f2cd5e35082a7f5f1c2 SHA1 5f013c8322ed8c6550b50b3ddcaa5cd6c5c3f821 SHA256 7d441e3360fea37664378bf977a9b2cbb9095742ccdb806ccb23ea0a6243eb00
 EBUILD automake-1.5-r1.ebuild 1970 RMD160 7a389197850587c7ba05265b55f651679728a2b6 SHA1 404092e54420bb8f987df3711ca6bb08ba5b87bf SHA256 a24fbafa5ac1e174fb4e89627098723630ec01ebe6478a9cbfa615e5f0a10702
@@ -49,12 +51,12 @@ EBUILD automake-1.6.3-r1.ebuild 1567 RMD160 cb1ebcff3b895f9f042fa2d68084e2361c65
 EBUILD automake-1.7.9-r2.ebuild 1758 RMD160 c44b0b40bd2da2d3b5e3f83c09a7eedd246958c0 SHA1 7d4fb4f4c393fb7eb3b48ef93aa32b3f1253de22 SHA256 cd467d4f80b4b710a648d92d1ef4fb47b2bf3ab78afdd95daf5774ac9a5c1c13
 EBUILD automake-1.8.5-r4.ebuild 1758 RMD160 df0283f97974d9f9775676589dda8085b18298bf SHA1 36558b27c6ccd8da5689a5e1bcf0213ea0ab9950 SHA256 f76a0d3813b1c8fd0b41a8fa3fc407857fa2d39fc774f57082060f13e7eb8a01
 EBUILD automake-1.9.6-r3.ebuild 2013 RMD160 a4e2501161478a3a6fc0a54c6f8c8e1a5aff67dd SHA1 a9623971e45b1cee0ad2c0e711d24967bc184af0 SHA256 ff67942251b36cb05160fe5720d88da8d65f3409f49ab6b21a58c29b803bbc5b
-MISC ChangeLog 26680 RMD160 550b7635c75d4ae9cbeb4362b055e4646e06d617 SHA1 56512aec640f2b6a55d44e94835df20c05644522 SHA256 eec930977d1aec37fa1e494677755a7e1c645bbf619a16ed3f7a227cb6f99398
+MISC ChangeLog 26802 RMD160 1edcc5472a47a49c41628436e6efb0317159be2c SHA1 6616ae0147f10496d8fc697838fd30eeeaa5b0da SHA256 d49e769a1078cbffcde19fba88f66b8eda3b08e60d81d4646c113a6fbe1d2323
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+sx9UACgkQX3X2B8XHTonTZQCgnENROy5R1IeBcltT14xFzgI4
-5jwAn3HJBkn7RTY//61y7IP7PXi1D9Dy
-=izWN
+iEYEARECAAYFAk/LNcMACgkQX3X2B8XHTolRiQCeIVQAYe03Zog+o9au1oeqxfOc
+XHAAni92kmnmURf8TifBsrv+e17e2+Ka
+=trze
 -----END PGP SIGNATURE-----
