@@ -1,0 +1,75 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/automake-1.12.1.ebuild,v 1.1 2012/06/02 06:23:41 vapier Exp $
+
+inherit eutils versionator unpacker
+
+if [[ ${PV/_beta} == ${PV} ]]; then
+	MY_P=${P}
+	SRC_URI="mirror://gnu/${PN}/${P}.tar.xz
+		ftp://alpha.gnu.org/pub/gnu/${PN}/${MY_P}.tar.xz"
+else
+	MY_PV="$(get_major_version).$(($(get_version_component_range 2)-1))b"
+	MY_P="${PN}-${MY_PV}"
+
+	# Alpha/beta releases are not distributed on the usual mirrors.
+	SRC_URI="ftp://alpha.gnu.org/pub/gnu/${PN}/${MY_P}.tar.xz"
+fi
+
+DESCRIPTION="Used to generate Makefile.in from Makefile.am"
+HOMEPAGE="http://www.gnu.org/software/automake/"
+
+LICENSE="GPL-2"
+# Use Gentoo versioning for slotting.
+SLOT="${PV:0:4}"
+#KEYWORDS="~ppc-aix ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="dev-lang/perl
+	>=sys-devel/automake-wrapper-7
+	>=sys-devel/autoconf-2.62
+	>=sys-apps/texinfo-4.7
+	sys-devel/gnuconfig"
+DEPEND="${RDEPEND}
+	sys-apps/help2man"
+
+S="${WORKDIR}/${MY_P}"
+
+src_unpack() {
+	unpacker_src_unpack
+	cd "${S}"
+	sed -i \
+		-e "s|: (automake)| v${SLOT}: (automake${SLOT})|" \
+		doc/automake.texi || die
+	local f
+	for f in doc/automake.{texi,info*} ; do
+		mv ${f} ${f%.*}${SLOT}.${f#*.} || die
+	done
+	touch -r configure doc/*.{texi,info}*
+	sed -i -r \
+		-e "s:(automake)(.info|.texi):\1${SLOT}\2:g" \
+		Makefile.in || die
+	export WANT_AUTOCONF=2.5
+}
+
+src_compile() {
+	econf --docdir="${EPREFIX}"/usr/share/doc/${PF} HELP2MAN=true || die
+	emake APIVERSION="${SLOT}" pkgvdatadir="${EPREFIX}/usr/share/${PN}-${SLOT}" || die
+}
+
+src_install() {
+	emake DESTDIR="${D}" install \
+		APIVERSION="${SLOT}" pkgvdatadir="${EPREFIX}/usr/share/${PN}-${SLOT}" || die
+	dodoc AUTHORS ChangeLog NEWS README THANKS
+
+	rm \
+		"${ED}"/usr/bin/{aclocal,automake} \
+		"${ED}"/usr/share/man/man1/{aclocal,automake}.1 || die
+
+	# remove all config.guess and config.sub files replacing them
+	# w/a symlink to a specific gnuconfig version
+	local x
+	for x in guess sub ; do
+		dosym ../gnuconfig/config.${x} /usr/share/${PN}-${SLOT}/config.${x}
+	done
+}
