@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/automake
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.164 2012/05/09 15:38:15 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.165 2012/06/02 06:23:41 vapier Exp $
+
+*automake-1.12.1 (02 Jun 2012)
+
+  02 Jun 2012; Mike Frysinger <vapier@gentoo.org> +automake-1.12.1.ebuild:
+  Version bump.
 
   09 May 2012; Alexis Ballier <aballier@gentoo.org> automake-1.10.3.ebuild:
   keyword ~amd64-fbsd
